navbar fixed on small screens

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -95,7 +95,7 @@
     &--nav {
       padding: 14px 50px;
       font-size: 20px;
-      margin: 0;
+      margin: 0 0 30px 0;
     }
   }
 }
