--- a/styles/index.css
+++ b/styles/index.css
@@ -599,7 +599,7 @@ a {
   .btn_def--nav {
     padding: 14px 50px;
     font-size: 20px;
-    margin: 0; } }
+    margin: 0 0 30px 0; } }
 
 .navbar {
   padding: 0; }
@@ -627,7 +627,7 @@ a {
   .navbar__btn {
     color: #fff; }
 
-@media (min-width: 320px) and (max-width: 575px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .navbar {
     height: auto; }
     .navbar__brand {
@@ -635,25 +635,16 @@ a {
     .navbar__menu {
       position: absolute;
       top: 0;
-      left: 0;
-      display: none;
+      left: -100%;
       flex-direction: column;
       z-index: 10;
       width: 100%;
       height: 500px;
       margin: auto;
-      padding: 0;
+      padding: 20px 0 0 0;
       background-color: #fff;
       box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.1);
-      animation: myAnim 0.4s ease-out 0s 1 normal forwards;
-      transition: animation 0.4s ease; }
-  @keyframes myAnim {
-    0% {
-      opacity: 0;
-      transform: translateX(-250px); }
-    100% {
-      opacity: 1;
-      transform: translateX(0); } }
+      transition: 0.4s; }
     .navbar__list {
       padding: 30px 12px;
       margin: auto 0;
@@ -666,17 +657,15 @@ a {
       display: block;
       cursor: pointer;
       margin: 0 14px 0 auto;
-      z-index: 9; }
+      z-index: 11; }
       .navbar .burger-toggler div {
         width: 24px;
         height: 3px;
         margin: 5px;
-        background-color: #000; }
-    .navbar .nav-close {
-      margin: 20px 20px 0 auto; } }
+        background-color: #000; } }
 
-.navbar-toggle-show {
-  display: flex; }
+.active {
+  left: 0; }
 
 .hero__left {
   padding: 142px 0 0 121px; }
