--- a/styles/sections/_nav.scss
+++ b/styles/sections/_nav.scss
@@ -45,7 +45,7 @@
 
 // Extra small devices (portrait phones, less than 576px)
 
-@media (min-width: 320px) and (max-width: 575px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .navbar {
     height: auto;
 
@@ -56,30 +56,16 @@
     &__menu {
       position: absolute;
       top: 0;
-      left: 0;
-      display: none;
+      left: -100%;
       flex-direction: column;
       z-index: 10;
       width: 100%;
       height: 500px;
       margin: auto;
-      padding: 0;
+      padding: 20px 0 0 0;
       background-color: $color-white;
       box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.1);
-      animation: myAnim 0.4s ease-out 0s 1 normal forwards;
-      transition: animation 0.4s ease;
-    }
-
-    @keyframes myAnim {
-      0% {
-        opacity: 0;
-        transform: translateX(-250px);
-      }
-
-      100% {
-        opacity: 1;
-        transform: translateX(0);
-      }
+      transition: 0.4s;
     }
 
     &__list {
@@ -98,7 +84,7 @@
       display: block;
       cursor: pointer;
       margin: 0 14px 0 auto;
-      z-index: 9;
+      z-index: 11;
 
       div {
         width: 24px;
@@ -107,24 +93,9 @@
         background-color: #000;
       }
     }
-
-    .nav-close {
-      margin: 20px 20px 0 auto;
-    }
   }
 }
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-  .navbar {
-  }
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-  .navbar {
-  }
-}
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .navbar {
@@ -137,6 +108,7 @@
   }
 }
 
-.navbar-toggle-show {
-  display: flex;
+// navbar transitions
+.active {
+  left: 0;
 }
